# ai-humanizer

./: .gitignore  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
src/: App.feature-model-ui.test.jsx  App.feature-model.test.jsx  App.jsx  App.test.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: AddModelModal.jsx  AddModelModal.test.jsx  ApiKeyModal.jsx  AppUI.jsx  DiagnosticsPanel.jsx  GenerationLoadingToast.jsx  ManagementPanel.jsx  OutputPanel.jsx  OutputPanel.test.jsx  ProcessLogPanel.jsx  ResetConfirmModal.jsx  StyleModal.jsx  StyleModal.test.jsx  Topbar.jsx  WriterPanel.jsx  WritingProfileModal.jsx  WritingProfileModal.test.jsx
src/constants/: cliches.js  models.js  profiles.js  tones.js
src/features/app/: helpers.js  helpers.test.js
src/features/humanize/: promptGuards.js  promptGuards.test.js
src/features/process/: useProcessLog.js
src/lib/: api.js  api.test.js  profileFilter.js  profileFilter.test.js  prompts.js  prompts.test.js  storage.js  storage.test.js  tiptap-highlighter.js
src/styles/: app.css
src/utils/: diff.js  markdown.js  markdown.test.js  profile.js  text.js  text.test.js
